# tvslideshow

./: Dockerfile  LICENSE  README.md  photo_converter.sh
buildroot.external/: Config.in  external.desc  external.mk
buildroot.external/board/mqpro/: genimage.cfg  linux.config  post-build.sh  uboot.fragment
buildroot.external/board/mqpro/patches/linux/: 0001-Fix-Unknown-relocation-type-57-error.patch  0002-Add-memory-info-to-device-tree.patch  linux.hash
buildroot.external/board/mqpro/patches/rtl8723ds/: 0001-Fix-Unknown-relocation-type-57-error.patch
buildroot.external/board/mqpro/patches/uboot/: 0001-Fix-SWIG_AppendOutput.patch  uboot.hash
buildroot.external/board/mqpro/rootfs_overlay/etc/init.d/: S42wifi
buildroot.external/board/mqpro/rootfs_overlay/root/: .profile
buildroot.external/configs/: mqpro_defconfig
buildroot.external/package/slideshow/: Config.in  S20slideshow  slideshow.mk
slideshow/: meson.build
slideshow/src/: display.c  display.h  image.c  image.h  imglist.c  imglist.h  main.c  sshow.c  sshow.h
